Verify TFGs y arreglados algunos problemas al actualizar
