# models/nosql/tfgs.js
@@ -8,7 +8,10 @@ const TfgSchema = new mongoose.Schema({
     "keywords": { type: [String], required: true }, // Lista de palabras clave
     "link": { type: String, required: true }, // Enlace al TFG
     "advisor": { type: String, required: true }, // Nombre del tutor
-    "abstract": { type: String, required: true } // Resumen del trabajo
+    "abstract": { type: String, required: true }, // Resumen del trabajo
+    "verified": { type: Boolean, default: false }, // Verificado
+    "verifiedBy": { type: String, default: null }, // Verificado por
+    "reason": { type: String, default: null } // Razón de verificación
 }, {
     timestamps: true, // Agrega createdAt y updatedAt automáticamente
     versionKey: false
